tests/ui/parser/const-param-decl-on-type-instead-of-impl.stderr
error: unexpected `const` parameter declaration
  --> $DIR/const-param-decl-on-type-instead-of-impl.rs:2:12
   |
LL | impl NInts<const N: usize> {}
   |            ^^^^^^^^^^^^^^ expected a `const` expression, not a parameter declaration
   |
help: `const` parameters must be declared for the `impl`
   |
LL - impl NInts<const N: usize> {}
LL + impl<const N: usize> NInts<N> {}
   |

error: unexpected `const` parameter declaration
  --> $DIR/const-param-decl-on-type-instead-of-impl.rs:8:17
   |
LL | fn banana(a: <T<const N: usize>>::BAR) {}
   |                 ^^^^^^^^^^^^^^ expected a `const` expression, not a parameter declaration

error: unexpected `const` parameter declaration
  --> $DIR/const-param-decl-on-type-instead-of-impl.rs:12:26
   |
LL |     path::path::Struct::<const N: usize>()
   |                          ^^^^^^^^^^^^^^ expected a `const` expression, not a parameter declaration

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `path`
  --> $DIR/const-param-decl-on-type-instead-of-impl.rs:12:5
   |
LL |     path::path::Struct::<const N: usize>()
   |     ^^^^ use of unresolved module or unlinked crate `path`
   |
   = help: you might be missing a crate named `path`

error[E0412]: cannot find type `T` in this scope
  --> $DIR/const-param-decl-on-type-instead-of-impl.rs:8:15
   |
LL | fn banana(a: <T<const N: usize>>::BAR) {}
   |               ^ not found in this scope

error[E0308]: mismatched types
  --> $DIR/const-param-decl-on-type-instead-of-impl.rs:5:17
   |
LL |     let _: () = 42;
   |            --   ^^ expected `()`, found integer
   |            |
   |            expected due to this

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0412, E0433.
For more information about an error, try `rustc --explain E0308`.
